--- a/project/html/pages/index.ejs
+++ b/project/html/pages/index.ejs
@@ -7,7 +7,7 @@
     <!-- the classes 'page-header' and 'btn btn-dark' create bootstrap components.  -->
     <!-- Check out more components here: http://getbootstrap.com/components/ -->
     <div class="page-header">
-      <h1>Hello Friends!</h1>
+      <h1>Hello World!</h1>
     </div>
 
     <p>Click on the button for a surprise.</p>
