--- a/project/html/pages/about.ejs
+++ b/project/html/pages/about.ejs
@@ -8,7 +8,7 @@
     <!-- Check out more components here: http://getbootstrap.com/components/ -->
     <div class="page-header">
       <% include ../helpers/navbar %>
-      <h1>Welcome</h1>
+      <h1>About</h1>
     </div>
 
     <p>Click on the button for a surprise.</p>
