--- a/project/html/pages/project.ejs
+++ b/project/html/pages/project.ejs
@@ -8,13 +8,7 @@
     <!-- Check out more components here: http://getbootstrap.com/components/ -->
     <div class="page-header">
       <% include ../helpers/navbar %>
-      <h1>Welcome</h1>
+      <h1>Database Web App</h1>
     </div>
-
-    <p>Click on the button for a surprise.</p>
-
-    <button onClick="showPicture()" class="btn btn-dark">Click me</button>
-
-    <div id="image"></div>
   </body>
 </html>
