--- a/project/html/helpers/head.ejs
+++ b/project/html/helpers/head.ejs
@@ -32,7 +32,29 @@
 
 <!-- then our app's own js file -->
 <script>
-  var apiKey = "<%= process.env.API_KEY %>";
+  var weatherApiKey = "<%= process.env.API_KEY %>";
 </script>
 
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/6.4.2/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#config-web-app -->
+<script src="https://www.gstatic.com/firebasejs/6.4.1/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/6.4.1/firebase-database.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "<%= process.env.FIREBASE_API_KEY %>",
+    authDomain: "hubspot-building-first-web-app.firebaseapp.com",
+    databaseURL: "https://hubspot-building-first-web-app.firebaseio.com",
+    projectId: "hubspot-building-first-web-app",
+    storageBucket: "hubspot-building-first-web-app.appspot.com",
+    messagingSenderId: "1064388200218",
+    appId: "1:1064388200218:web:7fff84da769b86a0"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
 <script src="js/main.js"></script>
